# cost-estimate-api

./: README.md  pyproject.toml  requirements.txt
cost_estimate_api/: __init__.py  __main__.py  cost_estimate_linear_regression.py  create_app.py  linear_regression.py  routes.py  types.py
examples/: mpg_example.py  request_example.py
scripts/: mpg_example.py
test/: test_api.py  test_cost_linear_regression.py  test_linear_regression.py
test/test_data/: test_data.json
