[tool.poetry]
name = "cost-estmate-api"
version = "0.1.0"
description = ""
authors = ["Dean Shaff <dean.shaff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.3"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
