[tool.poetry]
name = "cost-estmate-api"
version = "0.1.0"
description = ""
authors = ["Dean Shaff <dean.shaff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.3"
numpy = "1.18"
tensorflow = "^2.3.1"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
matplotlib = "^3.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
